--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "eslint-plugin-vue": "^7.5.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.1.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.0",
     "ts-jest": "^26.4.4",
     "vue-jest": "^3.0.4"
   }
