:art: リセットCSSを追加

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "modern-css-reset": "^1.4.0",
+    "nuxt": "^2.14.12",
+    "yakuhanjp": "^3.3.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
@@ -22,6 +24,7 @@
     "@nuxtjs/composition-api": "^0.19.1",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
