--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "modern-css-reset": "^1.4.0",
     "nuxt": "^2.14.12",
+    "throttle-debounce": "^3.0.1",
     "yakuhanjp": "^3.3.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@types/throttle-debounce": "^2.1.0",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
