--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
+    "staging-deploy": "gh-pages -d dist -t",
     "lint": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "fix": "yarn lint --fix",
     "test": "jest"
@@ -36,6 +37,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
+    "gh-pages": "^3.1.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pug": "^3.0.0",
