--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxt/content": "^1.12.0",
     "@nuxt/typescript-runtime": "^2.0.1",
     "core-js": "^3.8.3",
     "modern-css-reset": "^1.4.0",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.12",
     "throttle-debounce": "^3.0.1",
     "yakuhanjp": "^3.3.1"
