--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "modern-css-reset": "^1.4.0",
     "moment": "^2.29.1",
     "nuxt": "^2.14.12",
-    "throttle-debounce": "^3.0.1",
-    "yakuhanjp": "^3.3.1"
+    "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
