:airplane: Reactのプロジェクトを追加

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,9 +4,9 @@ ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
 
 
-# WORKDIR /app
+WORKDIR /app
 
-# COPY package.json yarn.lock ./
+COPY package.json yarn.lock ./
 
-# RUN set -ex \
-#   && yarn install
+RUN set -ex \
+  && yarn install
