--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "yarn lint:eslint && yarn lint:prettier",
+    "lint:eslint": "eslint --ignore-path .gitignore '**/*.{js,ts,tsx}'",
+    "lint:prettier": "prettier --check --ignore-path .gitignore '**/*.{js,ts,tsx}'",
+    "fix": "yarn fix:eslint && yarn fix:prettier",
+    "fix:eslint": "eslint --fix --ignore-path .gitignore '**/*.{js,ts,tsx}'",
+    "fix:prettier": "prettier --write --ignore-path .gitignore '**/*.{js,ts,tsx}'"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -15,8 +20,11 @@
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
 }
